--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "3": "^2.1.0",
+    "@prisma/client": "5.15.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "prisma": "^5.15.1",
+    "sqlite3": "^5.1.7"
   },
   "type": "module"
 }
