Create basic api functions

--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/app.js"
+    "dev": "node src/app.js",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "3": "^2.1.0",
     "@prisma/client": "5.15.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "prisma": "^5.15.1",
     "sqlite3": "^5.1.7"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "prettier": "^3.3.2"
+  }
 }
